--- a/chat_server/index.html
+++ b/chat_server/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Socket.IO chat</title>
-        <link rel="apple-touch-icon" href="/static/media/logo.5d5d9eef.svg" />
+        <link rel="apple-touch-icon" href="logo.svg" />
     </head>
     <body>
         <div id="root"></div>
