login process issue

--- a/chat_server/index.html
+++ b/chat_server/index.html
@@ -11,9 +11,9 @@
             window.socket = io();
         </script>
         <!-- for development purposes -->
-        <script type="text/javascript" src="http://localhost:3000/static/js/0.chunk.js"></script>
-        <script type="text/javascript" src="http://localhost:3000/static/js/bundle.js"></script>
-        <script type="text/javascript" src="http://localhost:3000/static/js/main.chunk.js"></script>
+        <script type="text/javascript" src="http://10.85.50.14:3000/static/js/0.chunk.js"></script>
+        <script type="text/javascript" src="http://10.85.50.14:3000/static/js/bundle.js"></script>
+        <script type="text/javascript" src="http://10.85.50.14:3000/static/js/main.chunk.js"></script>
         <!-- /for development purposes -->
 
         <!-- generated build -->
